# cached-nix-shell

./: Cargo.toml
.github/workflows/: pages.yml  test.yml
nix/: sources.json
nix-trace/: test.sh  trace-nix.c
src/: main.rs  nix_path.rs  shebang.rs  trace.rs
tests/: lib.sh  t04-env-pure-impure.sh  t10-non-utf8.sh  t16-shopt.sh  t17-interactive.sh  t19-tarball-unpack.sh
