[package]
name = "cached-nix-shell"
version = "0.1.5"
authors = ["Albert Safin <xzfcpw@gmail.com>"]
license = "Unlicense OR MIT"
edition = "2018"

[build-dependencies]
which = "6.0.1"

[dependencies]
blake3 = "1.5.1"
bytelines = "2.5.0"
itertools = "0.13.0"
nix = { version = "0.29.0", features = [ "fs" ] }
nom = "7.1.3"
once_cell = "1.19.0"
serde_json = "1.0.117"
tempfile = "3.10.1"
ufcs = "0.1.0"
xdg = "2.5.2"
